--- a/.github/workflow/cicd.yml
+++ b/.github/workflow/cicd.yml
@@ -16,4 +16,4 @@ jobs:
         run: pip install flask pytest
 
       - name: Testing
-        run: python3 -m pytest
+        run: python -m pytest
